// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls out live ballot sheets in test mode 1`] = `
.c8 {
  display: inline-block;
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: rgb(71,167,75);
  cursor: pointer;
  width: 100%;
  padding: 0.75rem 1rem;
  line-height: 1;
  white-space: nowrap;
  color: #FFFFFF;
}

body.using-keyboard .c7:focus {
  outline: none;
  box-shadow: 0 0 0 2px rgba(255,255,255,1), 0 0 0 4px rgba(100,100,100,0.9);
}

.c8:focus {
  outline: none;
}

.c8:hover,
.c8:active {
  outline: none;
}

.c0 {
  background-color: #455a64;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: inline-block;
  margin: 0.75rem 1rem;
  white-space: nowrap;
  color: #ffffff;
  font-size: 1.3rem;
  font-weight: 600;
}

.c2 span {
  font-weight: 400;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 700;
}

.c4 {
  margin-right: 1em;
}

.c4 button {
  margin-left: 0.5em;
}

.c6 {
  line-height: 1.2;
}

.c6 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c6 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c6 h3 {
  font-size: 1.17em;
}

.c6 h4 {
  font-size: 1em;
}

.c6 h5 {
  font-size: 0.9em;
}

.c6 h3,
.c6 h4,
.c6 h5,
.c6 p,
.c6 hr {
  margin-top: 1em;
  margin-bottom: 1em;
}

.c6 h1 + h2 {
  margin-top: -0.75em;
}

.c6 h1 + p,
.c6 h2 + p {
  margin-top: -0.75em;
}

.c6 h3 + p,
.c6 h4 + p,
.c6 h5 + p {
  margin-top: -1em;
}

.c6 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c6 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c6 dl {
  margin: 1em 0;
}

.c6 hr {
  border: 0;
  border-top: 0.1em solid #000000;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5em;
}

.c5 > div {
  margin-right: 1em;
}

.c5 > div:first-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 1em;
}

.c5 > div:last-child {
  margin-right: 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 > *:first-child {
  margin-right: 1em;
}

.c9 img {
  max-width: 100%;
  max-height: 82vh;
}

@media (min-width:480px) {
  .c6 {
    line-height: 1.3;
  }
}

<div>
  <div
    class="cBbBFP"
  >
    <div
      class="c0"
    >
      <nav
        class="c1"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class=""
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="c4"
        />
      </nav>
    </div>
    <main
      class="fAKqMS"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <h1>
            <span
              style="font-size: 2em;"
            >
              Live Ballot
            </span>
          </h1>
          <p>
            The last scanned ballot was not tabulated.
          </p>
          <p>
            Remove the LIVE ballot before continuing.
          </p>
          <button
            class="c7 c8"
            type="button"
          >
            The ballot has been removed
          </button>
        </div>
        <div
          class="c9"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="fFwtSv"
      data-testid="electionInfoBar"
    >
      <div
        class="gvrBrR"
        style="flex: 1;"
      >
        <strong>
          General Election
        </strong>
         —
         
        <span
          class="fUIxJs"
        >
          Nov 3, 2020
        </span>
        <div
          class="iybVtA"
        >
          <span
            class="fUIxJs"
          >
            Franklin County
            ,
          </span>
           
          <span
            class="fUIxJs"
          >
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="bmZoEB"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="bmZoEB"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="iybVtA"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`calls out test ballot sheets in live mode 1`] = `
.c8 {
  display: inline-block;
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: rgb(71,167,75);
  cursor: pointer;
  width: 100%;
  padding: 0.75rem 1rem;
  line-height: 1;
  white-space: nowrap;
  color: #FFFFFF;
}

body.using-keyboard .c7:focus {
  outline: none;
  box-shadow: 0 0 0 2px rgba(255,255,255,1), 0 0 0 4px rgba(100,100,100,0.9);
}

.c8:focus {
  outline: none;
}

.c8:hover,
.c8:active {
  outline: none;
}

.c0 {
  background-color: #455a64;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: inline-block;
  margin: 0.75rem 1rem;
  white-space: nowrap;
  color: #ffffff;
  font-size: 1.3rem;
  font-weight: 600;
}

.c2 span {
  font-weight: 400;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 700;
}

.c4 {
  margin-right: 1em;
}

.c4 button {
  margin-left: 0.5em;
}

.c6 {
  line-height: 1.2;
}

.c6 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c6 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c6 h3 {
  font-size: 1.17em;
}

.c6 h4 {
  font-size: 1em;
}

.c6 h5 {
  font-size: 0.9em;
}

.c6 h3,
.c6 h4,
.c6 h5,
.c6 p,
.c6 hr {
  margin-top: 1em;
  margin-bottom: 1em;
}

.c6 h1 + h2 {
  margin-top: -0.75em;
}

.c6 h1 + p,
.c6 h2 + p {
  margin-top: -0.75em;
}

.c6 h3 + p,
.c6 h4 + p,
.c6 h5 + p {
  margin-top: -1em;
}

.c6 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c6 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c6 dl {
  margin: 1em 0;
}

.c6 hr {
  border: 0;
  border-top: 0.1em solid #000000;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5em;
}

.c5 > div {
  margin-right: 1em;
}

.c5 > div:first-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 1em;
}

.c5 > div:last-child {
  margin-right: 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 > *:first-child {
  margin-right: 1em;
}

.c9 img {
  max-width: 100%;
  max-height: 82vh;
}

@media (min-width:480px) {
  .c6 {
    line-height: 1.3;
  }
}

<div>
  <div
    class="cBbBFP"
  >
    <div
      class="c0"
    >
      <nav
        class="c1"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class=""
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="c4"
        />
      </nav>
    </div>
    <main
      class="fAKqMS"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <h1>
            <span
              style="font-size: 2em;"
            >
              Test Ballot
            </span>
          </h1>
          <p>
            The last scanned ballot was not tabulated.
          </p>
          <p>
            Remove the TEST ballot before continuing.
          </p>
          <button
            class="c7 c8"
            type="button"
          >
            The ballot has been removed
          </button>
        </div>
        <div
          class="c9"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="fFwtSv"
      data-testid="electionInfoBar"
    >
      <div
        class="gvrBrR"
        style="flex: 1;"
      >
        <strong>
          General Election
        </strong>
         —
         
        <span
          class="fUIxJs"
        >
          Nov 3, 2020
        </span>
        <div
          class="iybVtA"
        >
          <span
            class="fUIxJs"
          >
            Franklin County
            ,
          </span>
           
          <span
            class="fUIxJs"
          >
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="bmZoEB"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="bmZoEB"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="iybVtA"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is blank if it is 1`] = `
.c8 {
  display: inline-block;
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: rgb(71,167,75);
  cursor: pointer;
  width: 100%;
  padding: 0.75rem 1rem;
  line-height: 1;
  white-space: nowrap;
  color: #FFFFFF;
}

body.using-keyboard .c7:focus {
  outline: none;
  box-shadow: 0 0 0 2px rgba(255,255,255,1), 0 0 0 4px rgba(100,100,100,0.9);
}

.c8:focus {
  outline: none;
}

.c8:hover,
.c8:active {
  outline: none;
}

.c0 {
  background-color: #455a64;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: inline-block;
  margin: 0.75rem 1rem;
  white-space: nowrap;
  color: #ffffff;
  font-size: 1.3rem;
  font-weight: 600;
}

.c2 span {
  font-weight: 400;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 700;
}

.c4 {
  margin-right: 1em;
}

.c4 button {
  margin-left: 0.5em;
}

.c6 {
  line-height: 1.2;
}

.c6 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c6 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c6 h3 {
  font-size: 1.17em;
}

.c6 h4 {
  font-size: 1em;
}

.c6 h5 {
  font-size: 0.9em;
}

.c6 h3,
.c6 h4,
.c6 h5,
.c6 p,
.c6 hr {
  margin-top: 1em;
  margin-bottom: 1em;
}

.c6 h1 + h2 {
  margin-top: -0.75em;
}

.c6 h1 + p,
.c6 h2 + p {
  margin-top: -0.75em;
}

.c6 h3 + p,
.c6 h4 + p,
.c6 h5 + p {
  margin-top: -1em;
}

.c6 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c6 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c6 dl {
  margin: 1em 0;
}

.c6 hr {
  border: 0;
  border-top: 0.1em solid #000000;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5em;
}

.c5 > div {
  margin-right: 1em;
}

.c5 > div:first-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 1em;
}

.c5 > div:last-child {
  margin-right: 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 > *:first-child {
  margin-right: 1em;
}

.c9 img {
  max-width: 100%;
  max-height: 82vh;
}

@media (min-width:480px) {
  .c6 {
    line-height: 1.3;
  }
}

<div>
  <div
    class="cBbBFP"
  >
    <div
      class="c0"
    >
      <nav
        class="c1"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class=""
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="c4"
        />
      </nav>
    </div>
    <main
      class="fAKqMS"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <h1>
            <span
              style="font-size: 2em;"
            >
              Blank Ballot
            </span>
          </h1>
          <p>
            The last scanned ballot was not tabulated because no votes were detected.
          </p>
          <p>
            <button
              class="c7 c8"
              type="button"
            >
              Remove to Adjudicate
            </button>
          </p>
          <p>
            <button
              class="c7 c8"
              type="button"
            >
              Tabulate As Is
            </button>
          </p>
        </div>
        <div
          class="c9"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="fFwtSv"
      data-testid="electionInfoBar"
    >
      <div
        class="gvrBrR"
        style="flex: 1;"
      >
        <strong>
          General Election
        </strong>
         —
         
        <span
          class="fUIxJs"
        >
          Nov 3, 2020
        </span>
        <div
          class="iybVtA"
        >
          <span
            class="fUIxJs"
          >
            Franklin County
            ,
          </span>
           
          <span
            class="fUIxJs"
          >
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="bmZoEB"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="bmZoEB"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="iybVtA"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is overvoted if it is 1`] = `
.c8 {
  display: inline-block;
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: rgb(71,167,75);
  cursor: pointer;
  width: 100%;
  padding: 0.75rem 1rem;
  line-height: 1;
  white-space: nowrap;
  color: #FFFFFF;
}

body.using-keyboard .c7:focus {
  outline: none;
  box-shadow: 0 0 0 2px rgba(255,255,255,1), 0 0 0 4px rgba(100,100,100,0.9);
}

.c8:focus {
  outline: none;
}

.c8:hover,
.c8:active {
  outline: none;
}

.c0 {
  background-color: #455a64;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: inline-block;
  margin: 0.75rem 1rem;
  white-space: nowrap;
  color: #ffffff;
  font-size: 1.3rem;
  font-weight: 600;
}

.c2 span {
  font-weight: 400;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 700;
}

.c4 {
  margin-right: 1em;
}

.c4 button {
  margin-left: 0.5em;
}

.c6 {
  line-height: 1.2;
}

.c6 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c6 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c6 h3 {
  font-size: 1.17em;
}

.c6 h4 {
  font-size: 1em;
}

.c6 h5 {
  font-size: 0.9em;
}

.c6 h3,
.c6 h4,
.c6 h5,
.c6 p,
.c6 hr {
  margin-top: 1em;
  margin-bottom: 1em;
}

.c6 h1 + h2 {
  margin-top: -0.75em;
}

.c6 h1 + p,
.c6 h2 + p {
  margin-top: -0.75em;
}

.c6 h3 + p,
.c6 h4 + p,
.c6 h5 + p {
  margin-top: -1em;
}

.c6 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c6 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c6 dl {
  margin: 1em 0;
}

.c6 hr {
  border: 0;
  border-top: 0.1em solid #000000;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5em;
}

.c5 > div {
  margin-right: 1em;
}

.c5 > div:first-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 1em;
}

.c5 > div:last-child {
  margin-right: 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 > *:first-child {
  margin-right: 1em;
}

.c9 img {
  max-width: 100%;
  max-height: 82vh;
}

@media (min-width:480px) {
  .c6 {
    line-height: 1.3;
  }
}

<div>
  <div
    class="cBbBFP"
  >
    <div
      class="c0"
    >
      <nav
        class="c1"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class=""
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="c4"
        />
      </nav>
    </div>
    <main
      class="fAKqMS"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <h1>
            <span
              style="font-size: 2em;"
            >
              Overvote
            </span>
          </h1>
          <p>
            The last scanned ballot was not tabulated because an overvote was detected.
          </p>
          <p>
            <button
              class="c7 c8"
              type="button"
            >
              Remove to Adjudicate
            </button>
          </p>
          <p>
            <button
              class="c7 c8"
              type="button"
            >
              Tabulate As Is
            </button>
          </p>
        </div>
        <div
          class="c9"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="fFwtSv"
      data-testid="electionInfoBar"
    >
      <div
        class="gvrBrR"
        style="flex: 1;"
      >
        <strong>
          General Election
        </strong>
         —
         
        <span
          class="fUIxJs"
        >
          Nov 3, 2020
        </span>
        <div
          class="iybVtA"
        >
          <span
            class="fUIxJs"
          >
            Franklin County
            ,
          </span>
           
          <span
            class="fUIxJs"
          >
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="bmZoEB"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="bmZoEB"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="iybVtA"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is undervoted if it is 1`] = `
.c8 {
  display: inline-block;
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: rgb(71,167,75);
  cursor: pointer;
  width: 100%;
  padding: 0.75rem 1rem;
  line-height: 1;
  white-space: nowrap;
  color: #FFFFFF;
}

body.using-keyboard .c7:focus {
  outline: none;
  box-shadow: 0 0 0 2px rgba(255,255,255,1), 0 0 0 4px rgba(100,100,100,0.9);
}

.c8:focus {
  outline: none;
}

.c8:hover,
.c8:active {
  outline: none;
}

.c0 {
  background-color: #455a64;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: inline-block;
  margin: 0.75rem 1rem;
  white-space: nowrap;
  color: #ffffff;
  font-size: 1.3rem;
  font-weight: 600;
}

.c2 span {
  font-weight: 400;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 700;
}

.c4 {
  margin-right: 1em;
}

.c4 button {
  margin-left: 0.5em;
}

.c6 {
  line-height: 1.2;
}

.c6 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c6 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c6 h3 {
  font-size: 1.17em;
}

.c6 h4 {
  font-size: 1em;
}

.c6 h5 {
  font-size: 0.9em;
}

.c6 h3,
.c6 h4,
.c6 h5,
.c6 p,
.c6 hr {
  margin-top: 1em;
  margin-bottom: 1em;
}

.c6 h1 + h2 {
  margin-top: -0.75em;
}

.c6 h1 + p,
.c6 h2 + p {
  margin-top: -0.75em;
}

.c6 h3 + p,
.c6 h4 + p,
.c6 h5 + p {
  margin-top: -1em;
}

.c6 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c6 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c6 dl {
  margin: 1em 0;
}

.c6 hr {
  border: 0;
  border-top: 0.1em solid #000000;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5em;
}

.c5 > div {
  margin-right: 1em;
}

.c5 > div:first-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 1em;
}

.c5 > div:last-child {
  margin-right: 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 > *:first-child {
  margin-right: 1em;
}

.c9 img {
  max-width: 100%;
  max-height: 82vh;
}

@media (min-width:480px) {
  .c6 {
    line-height: 1.3;
  }
}

<div>
  <div
    class="cBbBFP"
  >
    <div
      class="c0"
    >
      <nav
        class="c1"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class=""
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="c4"
        />
      </nav>
    </div>
    <main
      class="fAKqMS"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <h1>
            <span
              style="font-size: 2em;"
            >
              Undervote
            </span>
          </h1>
          <p>
            The last scanned ballot was not tabulated because an undervote was detected.
          </p>
          <p>
            <button
              class="c7 c8"
              type="button"
            >
              Remove to Adjudicate
            </button>
          </p>
          <p>
            <button
              class="c7 c8"
              type="button"
            >
              Tabulate As Is
            </button>
          </p>
        </div>
        <div
          class="c9"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="fFwtSv"
      data-testid="electionInfoBar"
    >
      <div
        class="gvrBrR"
        style="flex: 1;"
      >
        <strong>
          General Election
        </strong>
         —
         
        <span
          class="fUIxJs"
        >
          Nov 3, 2020
        </span>
        <div
          class="iybVtA"
        >
          <span
            class="fUIxJs"
          >
            Franklin County
            ,
          </span>
           
          <span
            class="fUIxJs"
          >
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="bmZoEB"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="bmZoEB"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="iybVtA"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the sheet is unreadable if it is 1`] = `
.c8 {
  display: inline-block;
  border: none;
  border-radius: 0.25rem;
  box-sizing: border-box;
  background: rgb(71,167,75);
  cursor: pointer;
  width: 100%;
  padding: 0.75rem 1rem;
  line-height: 1;
  white-space: nowrap;
  color: #FFFFFF;
}

body.using-keyboard .c7:focus {
  outline: none;
  box-shadow: 0 0 0 2px rgba(255,255,255,1), 0 0 0 4px rgba(100,100,100,0.9);
}

.c8:focus {
  outline: none;
}

.c8:hover,
.c8:active {
  outline: none;
}

.c0 {
  background-color: #455a64;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: inline-block;
  margin: 0.75rem 1rem;
  white-space: nowrap;
  color: #ffffff;
  font-size: 1.3rem;
  font-weight: 600;
}

.c2 span {
  font-weight: 400;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 700;
}

.c4 {
  margin-right: 1em;
}

.c4 button {
  margin-left: 0.5em;
}

.c6 {
  line-height: 1.2;
}

.c6 h1 {
  margin: 2em 0 1em;
  line-height: 1.1;
  font-size: 1.5em;
}

.c6 h2 {
  margin: 1.5em 0 0.75em;
  font-size: 1.25em;
}

.c6 h3 {
  font-size: 1.17em;
}

.c6 h4 {
  font-size: 1em;
}

.c6 h5 {
  font-size: 0.9em;
}

.c6 h3,
.c6 h4,
.c6 h5,
.c6 p,
.c6 hr {
  margin-top: 1em;
  margin-bottom: 1em;
}

.c6 h1 + h2 {
  margin-top: -0.75em;
}

.c6 h1 + p,
.c6 h2 + p {
  margin-top: -0.75em;
}

.c6 h3 + p,
.c6 h4 + p,
.c6 h5 + p {
  margin-top: -1em;
}

.c6 > :not(.ignore-prose):first-child {
  margin-top: 0;
}

.c6 > :not(.ignore-prose):last-child {
  margin-bottom: 0;
}

.c6 dl {
  margin: 1em 0;
}

.c6 hr {
  border: 0;
  border-top: 0.1em solid #000000;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5em;
}

.c5 > div {
  margin-right: 1em;
}

.c5 > div:first-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 1em;
}

.c5 > div:last-child {
  margin-right: 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 > *:first-child {
  margin-right: 1em;
}

.c9 img {
  max-width: 100%;
  max-height: 82vh;
}

@media (min-width:480px) {
  .c6 {
    line-height: 1.3;
  }
}

<div>
  <div
    class="cBbBFP"
  >
    <div
      class="c0"
    >
      <nav
        class="c1"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class=""
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="c4"
        />
      </nav>
    </div>
    <main
      class="fAKqMS"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <h1>
            <span
              style="font-size: 2em;"
            >
              Unreadable
            </span>
          </h1>
          <p>
            The last scanned ballot was not tabulated.
          </p>
          <p>
            There was a problem reading the ballot. Remove ballot and reload in the scanner to try again.
          </p>
          <p>
            If the error persists remove ballot and create a duplicate ballot for the Resolution Board to review.
          </p>
          <button
            class="c7 c8"
            type="button"
          >
            The ballot has been removed
          </button>
        </div>
        <div
          class="c9"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 82vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="fFwtSv"
      data-testid="electionInfoBar"
    >
      <div
        class="gvrBrR"
        style="flex: 1;"
      >
        <strong>
          General Election
        </strong>
         —
         
        <span
          class="fUIxJs"
        >
          Nov 3, 2020
        </span>
        <div
          class="iybVtA"
        >
          <span
            class="fUIxJs"
          >
            Franklin County
            ,
          </span>
           
          <span
            class="fUIxJs"
          >
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="bmZoEB"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="bmZoEB"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="fZQsN"
      >
        <div
          class="iybVtA"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;
